Update HomePage.java